// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentStatus /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <div
        className="inner"
      >
        <h2
          className="row payment-status-row-1"
        >
          PAY_FAIL
        </h2>
        <div
          className="row payment-status-row-2"
        >
          PAY_SUB_H
        </div>
        <div
          className="row payment-status-row-3"
        >
          <Link
            className="button full"
            to="/default/payment/draft"
          >
            PAY_TRY_AGAIN_BTN
          </Link>
        </div>
        <div
          className="row payment-status-row-4"
        >
          <p>
            PAY_GIVE_UP_TXT
          </p>
          <button
            className="button full"
            onClick={[Function]}
            type="button"
          >
            PAY_GIVE_UP_BTN
          </button>
        </div>
      </div>
    </div>
    <Memo(Connect(Contact)) />
  </div>
</div>
`;

exports[`Test <PaymentStatus /> cases should render draft correctly 1`] = `
<div
  className="container content"
>
  <div
    className="inner"
  >
    <div
      className="main-column single"
    >
      <div
        className="inner"
      >
        <h2
          className="row"
        >
          PAY_REQ
        </h2>
        <div
          className="row"
          dangerouslySetInnerHTML={
            Object {
              "__html": "PAY_WARN53",
            }
          }
        />
        <div
          className="row"
        >
          <Link
            className="button full"
            onClick={[Function]}
            to="/default/status"
          >
            PAY_PROC_BTN
          </Link>
        </div>
        <div
          className="row"
        >
          <button
            className="button full"
            onClick={[Function]}
            type="button"
          >
            PAY_GIVE_UP_BTN
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test <PaymentStatus /> cases should render failed state 1`] = `
<div
  className="container content"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <div
        className="inner"
      >
        <h2
          className="row payment-status-row-1"
        >
          PAY_FAIL
        </h2>
        <div
          className="row payment-status-row-2"
        >
          PAY_SUB_H
        </div>
        <div
          className="row payment-status-row-3"
        >
          <Link
            className="button full"
            to="/default/payment/draft"
          >
            PAY_TRY_AGAIN_BTN
          </Link>
        </div>
        <div
          className="row payment-status-row-4"
        >
          <p>
            PAY_GIVE_UP_TXT
          </p>
          <button
            className="button full"
            onClick={[Function]}
            type="button"
          >
            PAY_GIVE_UP_BTN
          </button>
        </div>
      </div>
    </div>
    <Connect(Contact) />
  </div>
</div>
`;
